2010-12-23  Alexander Pavlov  <apavlov@chromium.org>

Reviewed by Maciej Stachowiak.

        Web Inspector: CSS shorthand properties expand unnecessarily
        https://bugs.webkit.org/show_bug.cgi?id=36304

        "border-radius" is a shorthand property that has a "non-standard" format and longhands, see
        http://www.w3.org/TR/css3-background/#border-radius for reference. CSSParser does not use the
        standard parseShorthand() or parse4Values() methods but instead a custom parseBorderRadius() method.
        This method didn't use to create a ShorthandScope instance and set the m_implicitShorthand value
        appropriately when adding implicit longhands, thus they were added as normal properties
        found in the CSS (neither implicit, nor longhands). This is now fixed.

        WebCore:
        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseBorderRadius):

        LayoutTests:
        * inspector/elements-panel-styles-expected.txt:
        * inspector/resources/elements-panel-styles.css:
        (.foo):


Canonical link: https://commits.webkit.org/64969@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74630 268f45cc-cd09-0410-ab3c-d52691b4dbfc